--- a/public/css/index.css
+++ b/public/css/index.css
@@ -163,7 +163,7 @@ body {
 }
 
 .main {
-  padding: 50px 0;
+  min-height: calc(100vh - 144px);
 }
 
 .main h2 {
@@ -173,8 +173,12 @@ body {
   font-size: 1.7rem;
 }
 
+.main_home {
+  padding: 50px 0;
+  min-height: auto;
+}
+
 .main_signin {
-  min-height: calc(100vh - 144px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -217,6 +221,7 @@ body {
 
 .main_signin__container form button {
   font-size: 1rem;
+  border: none;
 }
 
 .main_signin__wrapper {
@@ -449,5 +454,136 @@ body {
 
 .room__bookmark:focus {
   outline: none;
+}
+
+.profile__container {
+  padding-top: 40px;
+}
+
+.profile__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.profile__picture {
+  width: 200px;
+  height: 200px;
+  background-position: center;
+  background-size: contain;
+  border-radius: 50%;
+}
+
+.profile__info {
+  width: 60%;
+}
+
+.profile__together {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.profile__together h1 {
+  margin: 0;
+  margin-right: 30px;
+}
+
+.profile__together span,
+.profile__together .profile__link,
+.profile__together button {
+  margin-top: 15px;
+  margin-right: 30px;
+  font-weight: 700;
+  font-size: 0.9rem;
+}
+
+.profile__more {
+  margin-top: 5px;
+  margin-right: 30px;
+  font-weight: 700;
+  font-size: 0.9rem;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+}
+
+.profile__more:hover {
+  cursor: pointer;
+}
+
+.profile__more:focus {
+  outline: none;
+}
+
+.profile__bio {
+  margin-top: 15px;
+  line-height: 1.4rem;
+  width: 80%;
+}
+
+.profile__bio_hide {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.profile__room {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 50px;
+  width: 80%;
+  display: flex;
+}
+
+.profile__room h2 {
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+.profile__promo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 170px;
+}
+
+.profile__promo h2 {
+  font-size: 1.9rem;
+}
+
+.profile__promo .intro__buttons {
+  margin-top: 30px;
+}
+
+.profile__promo .intro__buttons a {
+  font-size: 1rem;
+}
+
+.profile__doesnt {
+  padding-top: 30px;
+}
+
+.btn_change {
+  padding: 10px 20px;
 }
 /*# sourceMappingURL=index.css.map */
