--- a/public/css/index.css
+++ b/public/css/index.css
@@ -162,6 +162,12 @@ body {
   cursor: pointer;
 }
 
+.btn_change {
+  background-color: #303030;
+  padding: 10px 20px;
+  margin-left: 30px;
+}
+
 .main {
   min-height: calc(100vh - 144px);
 }
@@ -456,6 +462,75 @@ body {
   outline: none;
 }
 
+.room_show__container {
+  padding-top: 20px;
+}
+
+.room_show__together {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.room_show__slider {
+  width: 960px;
+  height: 500px;
+  background-color: #222222;
+}
+
+.room_show__address {
+  margin: 10px 0;
+  font-weight: 700;
+  font-size: 0.9rem;
+}
+
+.room_show__description {
+  margin: 0;
+  line-height: 1.4rem;
+}
+
+.room_show__room h1 {
+  margin: 0;
+}
+
+.room_show__sp {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.room_show__profile {
+  max-width: 17%;
+  text-align: center;
+}
+
+.room_show__profile .profile__picture {
+  width: 170px;
+  height: 170px;
+  margin: 0 auto;
+}
+
+.room_show__profile .room_show__name {
+  margin: 10px 0 5px;
+  width: inherit;
+  font-size: 1.3rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.room_show__profile .profile {
+  font-weight: 700;
+  font-size: 0.9rem;
+}
+
 .profile__container {
   padding-top: 40px;
 }
@@ -493,7 +568,6 @@ body {
 
 .profile__together h1 {
   margin: 0;
-  margin-right: 30px;
 }
 
 .profile__together span,
@@ -581,9 +655,5 @@ body {
 
 .profile__doesnt {
   padding-top: 30px;
-}
-
-.btn_change {
-  padding: 10px 20px;
 }
 /*# sourceMappingURL=index.css.map */
